--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             </div>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="photo.png" alt="Jay Joshi">
+                    <img src="jay joshi.png" alt="Jay Joshi">
                 </div>
                 <div class="about-text">
                     <h3>Professional Software Developer</h3>
